--- a/serenity/src/components/footer/Newsletter.css
+++ b/serenity/src/components/footer/Newsletter.css
@@ -2,7 +2,7 @@
     padding: 2rem 4rem;
     border: 1px solid var(--color-golden);
     background: var(--color-black);
-    background-color: blueviolet;
+    background-color: white;
     
 }
 
