--- a/serenity/src/components/home/home.css
+++ b/serenity/src/components/home/home.css
@@ -1,7 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
+html {
+  scroll-behavior: smooth;
+}
 /* Reset */
 * {
   padding: 0;
