--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,87 +1,56 @@
-
-
-html {
-  font-size: 62.5%;
+.NavbarItems{
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
+  width: 100%;
+  height: 100px;
+  border-radius: 13px;
 }
-
-body {
-  font-size: 1.6rem;
+.navbar-logo{
+  color: black;
+  font-size: 2rem;
+  cursor: pointer;
 }
-
-li {
+.nav-menu{
+  display: grid;
   list-style: none;
+  grid-template-columns: repeat(6,auto);
+  grid-gap: 10px;
+  align-items: center;
 }
-
-a {
+.nav-links{
   text-decoration: none;
-  color: #fff;
-}
+  color: black;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 0.7rem 1rem;
+  white-space: nowrap;
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 8vh;
-  scroll-behavior: smooth;
-  background: #000;
 }
-
-.nav__brand {
-  text-transform: uppercase;
+.nav-links:hover{
+  background-color:rgb(97, 81, 244);
+  color: antiquewhite;
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
 }
-
-.nav__menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  gap: 3rem;
-}
-
-.nav__toggler {
+.nav-links-mobile{
   display: none;
 }
+button{
+  padding: 0.5rem 1rem;
+  white-space: nowrap;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 
-.nav__toggler div {
-  width: 2.5rem;
-  height: 0.2rem;
-  margin: 0.4rem;
-  background: #fff;
-  transition: 0.3s ease-in;
 }
-
-@media screen and (max-width: 768px) {
-  .nav__toggler {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav__menu {
-    position: fixed;
-    top: 7vh;
-    right: 0;
-    height: 93vh;
-    width: 50vw;
-    background: #000;
-    flex-direction: column;
-    transform: translateX(100%);
-    transition: 0.5s ease-in;
-  }
-}
-
-/* Active Class */
-.nav__active {
-  transform: translateX(0%);
-}
-
-/* Toggle Icon Animation */
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-4px, 5px);
-}
-
-.toggle .line2 {
-  opacity: 0;
-}
-
-.toggle .line3 {
-  transform: rotate(45deg) translate(-4px, -5px);
+button:hover{
+  background-color: rgb(97, 81, 244);
+  color: rgb(246, 247, 248);
 }
