--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,19 +1,43 @@
-.app__footerOverlay {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    
+.footer{
+    padding: 4rem 6rem;
+    background: black;
+    color: antiquewhite;
+}
+.top{
+    display: flex;
+    align-items: center;
+    text-align: start;
+    justify-content: space-between;
+    flex-wrap: wrap ;
+}
+.top i{
+    color: antiquewhite;
+    font-size: 2rem;
+    margin-left: 1rem;
+}
+.top i:hover{
+    color: aqua;
 
+}
+.bottom{
+  padding-top: 2rem;  
+  text-align: start;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.bottom div{
     display: flex;
     flex-direction: column;
-    position: absolute;
 }
-
-.app__footerOverlay-black {
-    height: 25%;
-    background: var(--color-black);
+.bottom h4{
+    font-size: 1.3rem;
+    padding: 1rem 0.8rem 0;
 }
+.bottom a {
+    text-decoration: none;
+    color: antiquewhite;
+    padding-bottom: 0.4rem;
+    font-size: 1.1rem;
 
-.app__footerOverlay-img {
-    height: 75%;
 }
