--- a/client/src/components/contact/Contact.css
+++ b/client/src/components/contact/Contact.css
@@ -52,11 +52,13 @@
 
   }
   
-  .form1 {
+  .contact-form{
+    padding: 0 3rem 0 3rem;
     display: flex;
     flex-direction: column;
-    width: 100%;
-  }
+    height: 40vh;
+    margin-top: 4rem;
+}
   
   input,
   select {
